# banners

./: .gitignore  CLAUDE.md  Makefile  README.md  README.org  pyproject.toml  test.py
banners/: __init__.py  background.py  config.py  palette.py  slide.py
banners/content/: __init__.py  _graph_widget.js  _manim_widget.js  animated_graph.py  flow_animation.py  graph.py  image.py  manim.py  plot.py  table.py  text.py
banners/scenes/: __init__.py  pipeline.py
banners/slides/: __init__.py  closing.py  cover.py  intro.py  section.py
docs/: banners.html  index.html  search.js
example/: ondas_electromagneticas.py  showcase.py
test/: 01_intro.py  02_text.py  03_image.py  04_graph.py  05_animated_graph.py  06_table.py  07_plot.py  08_manim.py  09_flow_animation.py  10_background.py
