[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banners"
version = "0.1.2"
description = "Presentaciones composables para marimo"
requires-python = ">=3.10"
dependencies = [
    "marimo>=0.9.0",
    "anywidget>=0.9.0",
]

[project.optional-dependencies]
dev   = ["hatch", "pdoc", "pandas", "manim"]

[tool.hatch.build.targets.wheel]
packages = ["banners"]
