[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "banners"
version = "0.1.3"
description = "Presentaciones composables para marimo"
requires-python = ">=3.10"
dependencies = [
    "marimo>=0.9.0",
    "anywidget>=0.9.0",
]

[project.optional-dependencies]
dev   = ["hatch", "pdoc", "pandas", "manim"]
manim = ["manim"]
[tool.hatch.build.targets.wheel]
packages = ["banners"]
