[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "marimo-banners"
version = "0.1.6"
description = "Presentaciones composables para marimo"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "marimo>=0.9.0",
    "anywidget>=0.9.0",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev   = ["hatch", "pdoc", "pandas", "manim"]
manim = ["manim"]
[project.urls]
Homepage = "https://github.com/kascesar/banners"
Repository = "https://github.com/kascesar/banners"

[tool.hatch.build.targets.wheel]
packages = ["banners"]
